# oldcode

./: README.md  difm.py  videoplayer.py
GUIclient/: DEPS  GUIclient.cpp  GUIclient.h  GUIclient_rtpok.cpp  GUImaster.cpp  Make  Make.tryAllStatic  Makefile.am  Makefile.in  Makefile.orig  bestClassExample.cpp  bestExample.cpp  groups.xml  killClient.sh  killMaster.sh
GUIclient/.deps/: GUIclient.Po  bestClassExample.Po
Mcast/: .tm_project.cache  Makefile  Mcast.prj  Mcast.pws
Mcast/doc/: Anexo Red.sxw  Espionaje Software.sxw  Get_route.sxw  Makefile.am  TODO.txt  linux_ipv6_mcast.sxw  netlink_tut.doc  proc_ip6info.txt  proyectos existentes.sxw
Mcast/include/: GEOPAG.h  Makefile.am  defs.h  ip2hack.h  ip_functions.c  libnetlink.h  nl.h  tags
Mcast/src/: GEOPAG.c  GEOPAG_tester  GEOPAG_tester.c  IFS.c  LIBNET.c  LIBNET.c~  Makefile  Makefile.am  Makefile.in  Makefile~  NET.c  NET_FLAGS  PCAP.c  PCAP_inmenso.c  RT.c  build_GEOPAGtester.sh  if_inet6  ipv6_route  kk  libnetlink.c  main.c  main_ol.c  mcast  mierdaAPIipv6.c  tags
cttc-exercici/esp2008/: 2008ex1  2008ex1.c  2008ex2  2008ex2.cOK  2008ex2.c_OK_refact  2008ex_common.h  Makefile
cttc-exercici/esp2008/SOLUCION/: 2008ex2.c
cttc-exercici/exercici1/: Makefile  attribute.h  exercici1  input.txt
cttc-exercici/exercici1/SOLUCION/: exercici1.c
probeShinkenZimbra/: README  check_probe.py  getMail.py  mailExample.txt  probeMail.py  probecfg.yaml  probestatus.yaml
probeShinkenZimbra/asterisk/: call_template_probe.txt  modification_etc_asterisk_exten_clients.conf  probe_alert_asterisk.sh
probeShinkenZimbra/nrpe/: nrpe_local.cfg
