## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

mcast_docdir = $(prefix)/@NO_PREFIX_PACKAGE_DOC_DIR@

mcast_doc_DATA = \
	proc_ip6info.txt

EXTRA_DIST = $(mcast_doc_DATA)
