## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

mcast_includedir = $(pkgincludedir)

mcast_include_DATA = \
	rtnetlink.h\
	netlink.h\
	nl.h\
	defs.h

EXTRA_DIST = $(mcast_include_DATA)
