## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

INCLUDES =

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = mcast

mcast_SOURCES = \
	main.c\
	IFS_parsers.c\
	RT_parsers.c

mcast_LDFLAGS = 

mcast_LDADD = 

